--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-#\u6570\u636E\u6E90
 spring.datasource.url=jdbc:mysql://120.55.54.247:3306/professor_booking?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=Water.01
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.max-active=200
 spring.datasource.max-idle=20
 spring.datasource.min-idle=10
 
-#tomcat
-server.port=80
+server.port=8081
+server.servlet.context-path=/professor
