--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://120.55.54.247:3306/professor_booking?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://120.55.54.247:3306/professor_booking?characterEncoding=UTF-8&?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=Water.01
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
