--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.datasource.url=jdbc:mysql://120.55.54.247:3306/professor_booking?characterEncoding=UTF-8&useTimezone=true
+spring.datasource.url=jdbc:mysql://120.55.54.247:3306/professor_booking?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=Water.01
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.max-active=200
 spring.datasource.max-idle=20
 spring.datasource.min-idle=10
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 
 server.port=8081
 server.servlet.context-path=/professor
