--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://120.55.54.247:3306/professor_booking?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://47.111.164.47:3306/professor_booking?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=Water.01
+spring.datasource.password=Professor123.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.max-active=200
 spring.datasource.max-idle=20
