--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,15 @@
 			<version>3.10-FINAL</version>
 		</dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
+		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6.12</version>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
